# libsimdpp

./: CMakeLists.txt
cmake/: libsimdppConfig.cmake.in
cmake/simd-compile-options/: ARCH_ARM64_NEON.cc  ARCH_ARM_NEON.cc  ARCH_MIPS_MSA.cc  ARCH_POWER_ALTIVEC.cc  ARCH_POWER_VSX_206.cc  ARCH_POWER_VSX_207.cc  ARCH_X86_AVX.cc  ARCH_X86_AVX2.cc  ARCH_X86_AVX512BW.cc  ARCH_X86_AVX512DQ.cc  ARCH_X86_AVX512F.cc  ARCH_X86_AVX512VL.cc  ARCH_X86_FMA3.cc  ARCH_X86_FMA4.cc  ARCH_X86_POPCNT_INSN.cc  ARCH_X86_SSE2.cc  ARCH_X86_SSE3.cc  ARCH_X86_SSE4_1.cc  ARCH_X86_SSSE3.cc  ARCH_X86_XOP.cc  CMakeLists.txt  README.md  simd-compile-optionsConfig.cmake.in
simdpp/: CMakeLists.txt
